# gumsmaqqer

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  build.sh  gumsmaqqer  version.p6
lib/: emojis.cc  emojis.h  gsmq.h  image.cc  image.h  index.cc  index.h  io.h  printer.cc  printer.h  renderer.cc  renderer.h  stb_image.h  stb_image_write.h  utils.cc  utils.h
src/: emojis.cc  emojis.h  image.cc  image.h  io.h  main.cc  parser.cc  parser.h  printer.cc  printer.h  renderer.cc  renderer.h  utils.cc  utils.h  version.h
tools/: spritesheet.cc
